src/QLineEdit.h


// 
// This file has been automatically generated by RaQt_maker V0.0.4.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQLineEditCtor_1(void * parent);
EXTERNC void * SCWQLineEditCtor_1(void * parent);
EXTERNC void * QWQLineEditCtor_2(char * arg1, void * parent);
EXTERNC void * SCWQLineEditCtor_2(char * arg1, void * parent);
EXTERNC void QWQLineEdittext(void * retBuffer, void * obj);
EXTERNC void QWQLineEditsetAlignment(void * obj, int  flag);
EXTERNC void QWQLineEditsetText(void * obj, char * arg1);
EXTERNC void QWQLineEditclear(void * obj);
EXTERNC void QWvalidateCB_QLineEdit(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQLineEditDtor(void *);
EXTERNC void SCWQLineEditDtor(void *);